added pebble function

--- a/ads/src/main/resources/application.yml
+++ b/ads/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring.jackson.serialization.INDENT_OUTPUT: true
+---
 
 spring:
   application:
@@ -29,6 +29,7 @@ spring:
   #        ddl-auto: create
   jackson:
     serialization:
+      INDENT_OUTPUT: true
       write-dates-as-timestamps: false
       write-durations-as-timestamps: true
 
@@ -40,10 +41,19 @@ spring:
 #      additional-paths: ['src/main/resources/sql']
 #      trigger-file: .reload
 
+ads:
+  env: development
 
 server:
   port: 8080
-  address: 127.0.0.1
+  addr: localhost
+
+admin:
+  html: //localhost:8000
+  fqdn: http://localhost:8000
+  port: 8080
+  scheme: http
+  addr: localhost
 
 #logging.file: demo.log
 #logging:
