--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,6 @@
 # push as ikeikeikeike/boot-ads:built
 
-FROM ruby:2.5.1
+FROM gradle:jdk8-slim
 
 WORKDIR /built
 
@@ -48,11 +48,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
         && \
     rm -rf /var/lib/apt/lists/*
 
-ENV RAILS_ENV=production
+# ENV RAILS_ENV=production
 
-WORKDIR /built/lit
-RUN yarn install \
-          && \
-    bundle install --path vendor/bundle --jobs=2 --without development && hash -r \
-          && \
-    bundle exec rake assets:precompile
+WORKDIR /built/ads
+RUN (cd ./ui && npm install -g gulp@3.9.1 typings@2.1.1 webpack@4.25.1 typescript@3.1.6 && npm link gulp)
