--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -52,4 +52,4 @@ RUN (cd ./ui && npm install -g gulp@3.9.1 typings@2.1.1 webpack@4.25.1 typescrip
           && \
     (cd ./ui && NODE_ENV=production gulp build) \
           && \
-    gradle clean build -Penv=production
+    gradle clean build -x test -Penv=production
