--- a/ads/ui/package.json
+++ b/ads/ui/package.json
@@ -27,6 +27,8 @@
     "gulp-watch": "^5.0.1",
     "gulp-webpack": "^1.5.0",
     "gulp-webserver": "^0.9.1",
+    "uglify-js": ">=2.6.0",
+    "handlebars": ">=4.0.0",
     "humps": "^2.0.1",
     "i18next": "^12.0.0",
     "js-cookie": "^2.2.0",
