--- a/ads/src/main/resources/application.yml
+++ b/ads/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
     active: dev
   datasource:
     url: jdbc:mysql://localhost:3306/ads_development?useSSL=false
-    username: root
-    password:
+    username: ${DB_USER:root}
+    password: ${DB_PASS:}
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
       connection-test-query: select 1
