--- a/ads/src/main/resources/application.yml
+++ b/ads/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
         generate_statistics: true
   #        ddl-auto: create
   jackson:
+    time-zone: Asia/Tokyo
     serialization:
       INDENT_OUTPUT: true
       write-dates-as-timestamps: false
